--- a/data_exploration/zillow_scraper.ipynb
+++ b/data_exploration/zillow_scraper.ipynb
@@ -2,11 +2,166 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import requests"
+    "import requests\n",
+    "import lxml\n",
+    "import pandas as pd\n",
+    "from bs4 import BeautifulSoup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<html><head><meta name=\"robots\" content=\"noindex, nofollow\"/><link href=\"https://www.zillowstatic.com/vstatic/80d5e73/static/css/z-pages/captcha.css\" type=\"text/css\" rel=\"stylesheet\" media=\"screen\"/><script>\n",
+      "        window._pxAppId = 'PXHYx10rg3';\n",
+      "        window._pxJsClientSrc = '/HYx10rg3/init.js';\n",
+      "        window._pxHostUrl = '/HYx10rg3/xhr';\n",
+      "        window._pxFirstPartyEnabled = true;\n",
+      "        window._pxreCaptchaTheme='light';\n",
+      "    </script><script type=\"text/javascript\" src=\"https://captcha.px-cdn.net/PXHYx10rg3/captcha.js?a=c&amp;m=0\"></script>\n",
+      "    <script>\n",
+      "        function getQueryString(name, url) {\n",
+      "            if (!url) url = window.location.href;\n",
+      "            name = name.replace(/[\\[\\]]/g, \"\\\\$&\");\n",
+      "            var regex = new RegExp(\"[?&]\" + name + \"(=([^&#]*)|&|#|$)\"),\n",
+      "                results = regex.exec(url);\n",
+      "            if (!results) return null;\n",
+      "            if (!results[2]) return '';\n",
+      "            return decodeURIComponent(results[2].replace(/\\+/g, \" \"));\n",
+      "        }\n",
+      "        document.addEventListener(\"DOMContentLoaded\", function(e) {\n",
+      "            var uuidVerifyRegExp = /^\\{?[0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{12}\\}?$/i;\n",
+      "            document.getElementById(\"uuid\").innerText = \"UUID: \" + uuidVerifyRegExp.exec(getQueryString(\"uuid\"));\n",
+      "        });\n",
+      "\n",
+      "        function handleCaptcha(response) {\n",
+      "            var vid = getQueryString(\"vid\"); // getQueryString is implemented below\n",
+      "            var uuid = getQueryString(\"uuid\");\n",
+      "            var name = '_pxCaptcha';\n",
+      "            var cookieValue =  btoa(JSON.stringify({r:response,v:vid,u:uuid}));\n",
+      "            var cookieParts = [name, '=', cookieValue, '; path=/'];\n",
+      "            cookieParts.push('; domain=' + window.location.hostname);\n",
+      "            cookieParts.push('; max-age=10');//expire after 10 seconds\n",
+      "            document.cookie = cookieParts.join('');\n",
+      "            var originalURL = getOriginalUrl(\"url\");\n",
+      "            var originalHost = window.location.host;\n",
+      "            var newHref = window.location.protocol + \"//\" + originalHost;\n",
+      "            originalURL = originalURL || '/';\n",
+      "            newHref = newHref + originalURL;\n",
+      "            window.location.href = newHref;\n",
+      "        }\n",
+      "\n",
+      "        function getOriginalUrl(name) {\n",
+      "            var url = getQueryString(name);\n",
+      "            if (!url) return null;\n",
+      "            var regExMatcher = new RegExp(\"(([^&#@]*)|&|#|$)\");\n",
+      "            var matches = regExMatcher.exec(url);\n",
+      "            if (!matches) return null;\n",
+      "            return matches[0];\n",
+      "        }\n",
+      "    </script></head><body><main class=\"zsg-layout-content\"><div class=\"error-content-block\"><div class=\"error-text-content\"><!-- <h1>Captcha</h1> --><h5>Please verify you're a human to continue.</h5><div id=\"content\" class=\"captcha-container\"><div id=\"px-captcha\" data-callback=\"handleCaptcha\"></div><img src=\"https://www.zillowstatic.com/static/logos/logo-65x14.png\" width=\"65\" alt=\"Zillow\" height=\"14\"></img></div></div></div></main><h4 id=\"uuid\" class=\"uuid-string zsg-fineprint\"></h4></body></html><!-- H:001  T:0ms  S:2605  R:Fri Nov 18 18:04:41 PST 2022  B:5.0.69791-master.6a9bb69~qa,spring_4_pre.670462f3 -->\n"
+     ]
+    }
+   ],
+   "source": [
+    "response = requests.get(\"https://www.zillow.com/homes/Raleigh,-NC_rb/\")\n",
+    "print(response.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "req_headers = {\n",
+    "    'accept': 'text/html,application/xhtml+xml,application/xml;q=0.9,image/webp,image/apng,*/*;q=0.8',\n",
+    "    'accept-encoding': 'gzip, deflate, br',\n",
+    "    'accept-language': 'en-US,en;q=0.8',\n",
+    "    'upgrade-insecure-requests': '1',\n",
+    "    'user-agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/61.0.3163.100 Safari/537.36'\n",
+    "}\n",
+    "with requests.Session() as s:\n",
+    "   city = 'raleigh/' #*****change this city to what you want*****\n",
+    "   url = 'https://www.zillow.com/homes/for_sale/'+city    \n",
+    "   r = s.get(url, headers=req_headers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#add contents of urls to soup variable from each url\n",
+    "soup = BeautifulSoup(r.content, \"html.parser\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'find'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [23], line 26\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[39mfor\u001b[39;00m link \u001b[39min\u001b[39;00m soup\u001b[39m.\u001b[39mfind_all(\u001b[39m\"\u001b[39m\u001b[39marticle\u001b[39m\u001b[39m\"\u001b[39m):\n\u001b[1;32m     25\u001b[0m     href \u001b[39m=\u001b[39m link\u001b[39m.\u001b[39mfind(\u001b[39m'\u001b[39m\u001b[39ma\u001b[39m\u001b[39m'\u001b[39m,class_\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mlist-card-link\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m---> 26\u001b[0m     addresses \u001b[39m=\u001b[39m href\u001b[39m.\u001b[39;49mfind(\u001b[39m'\u001b[39m\u001b[39maddress\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m     27\u001b[0m     addresses\u001b[39m.\u001b[39mextract()\n\u001b[1;32m     28\u001b[0m     urls\u001b[39m.\u001b[39mappend(href)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'find'"
+     ]
+    }
+   ],
+   "source": [
+    "# https://blog.devgenius.io/scraping-zillow-with-python-and-beautifulsoup-bbc7e581c218\n",
+    "\n",
+    "#create the first two dataframes\n",
+    "df = pd.DataFrame()\n",
+    "df1 = pd.DataFrame()\n",
+    "#all for loops are pulling the specified variable using beautiful soup and inserting into said variable\n",
+    "for i in soup:\n",
+    "    address = soup.find_all (class_= 'list-card-addr')\n",
+    "    price = list(soup.find_all (class_='list-card-price'))\n",
+    "    beds = list(soup.find_all(\"ul\", class_=\"list-card-details\"))\n",
+    "    details = soup.find_all ('div', {'class': 'list-card-details'})\n",
+    "    home_type = soup.find_all ('div', {'class': 'list-card-footer'})\n",
+    "    last_updated = soup.find_all ('div', {'class': 'list-card-top'})\n",
+    "    brokerage = list(soup.find_all(class_= 'list-card-brokerage list-card-img-overlay',text=True))\n",
+    "    link = soup.find_all (class_= 'list-card-link')\n",
+    "    \n",
+    "    #create dataframe columns out of variables\n",
+    "    df['prices'] = price\n",
+    "    df['address'] = address\n",
+    "    df['beds'] = beds\n",
+    "\n",
+    "#create empty url list\n",
+    "urls = []\n",
+    "\n",
+    "#loop through url, pull the href and strip out the address tag\n",
+    "for link in soup.find_all(\"article\"):\n",
+    "    href = link.find('a',class_=\"list-card-link\")\n",
+    "    addresses = href.find('address')\n",
+    "    addresses.extract()\n",
+    "    urls.append(href)\n",
+    "\n",
+    "#import urls into a links column\n",
+    "df['links'] = urls\n",
+    "df['links'] = df['links'].astype('str')\n",
+    "\n",
+    "#remove html tags\n",
+    "df['links'] = df['links'].replace('<a class=\"list-card-link\" href=\"', ' ', regex=True)\n",
+    "df['links'] = df['links'].replace('\" tabindex=\"0\"></a>', ' ', regex=True)"
    ]
   },
   {
@@ -19,7 +174,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 64-bit",
+   "display_name": "Python 3.10.6 ('really-estate-mG1FNr6d-py3.10')",
    "language": "python",
    "name": "python3"
   },
@@ -38,7 +193,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+    "hash": "3d0eff05228884e12a81e7c0d2b79ca80cfc67c833393b3fe7ac3844788baf07"
    }
   }
  },
