--- a/data_exploration/zillow_scraper.ipynb
+++ b/data_exploration/zillow_scraper.ipynb
@@ -2,76 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
     "import lxml\n",
     "import pandas as pd\n",
-    "from bs4 import BeautifulSoup"
+    "from bs4 import BeautifulSoup # Html search tool\n",
+    "import re # Regular expressions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<html><head><meta name=\"robots\" content=\"noindex, nofollow\"/><link href=\"https://www.zillowstatic.com/vstatic/80d5e73/static/css/z-pages/captcha.css\" type=\"text/css\" rel=\"stylesheet\" media=\"screen\"/><script>\n",
-      "        window._pxAppId = 'PXHYx10rg3';\n",
-      "        window._pxJsClientSrc = '/HYx10rg3/init.js';\n",
-      "        window._pxHostUrl = '/HYx10rg3/xhr';\n",
-      "        window._pxFirstPartyEnabled = true;\n",
-      "        window._pxreCaptchaTheme='light';\n",
-      "    </script><script type=\"text/javascript\" src=\"https://captcha.px-cdn.net/PXHYx10rg3/captcha.js?a=c&amp;m=0\"></script>\n",
-      "    <script>\n",
-      "        function getQueryString(name, url) {\n",
-      "            if (!url) url = window.location.href;\n",
-      "            name = name.replace(/[\\[\\]]/g, \"\\\\$&\");\n",
-      "            var regex = new RegExp(\"[?&]\" + name + \"(=([^&#]*)|&|#|$)\"),\n",
-      "                results = regex.exec(url);\n",
-      "            if (!results) return null;\n",
-      "            if (!results[2]) return '';\n",
-      "            return decodeURIComponent(results[2].replace(/\\+/g, \" \"));\n",
-      "        }\n",
-      "        document.addEventListener(\"DOMContentLoaded\", function(e) {\n",
-      "            var uuidVerifyRegExp = /^\\{?[0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{12}\\}?$/i;\n",
-      "            document.getElementById(\"uuid\").innerText = \"UUID: \" + uuidVerifyRegExp.exec(getQueryString(\"uuid\"));\n",
-      "        });\n",
-      "\n",
-      "        function handleCaptcha(response) {\n",
-      "            var vid = getQueryString(\"vid\"); // getQueryString is implemented below\n",
-      "            var uuid = getQueryString(\"uuid\");\n",
-      "            var name = '_pxCaptcha';\n",
-      "            var cookieValue =  btoa(JSON.stringify({r:response,v:vid,u:uuid}));\n",
-      "            var cookieParts = [name, '=', cookieValue, '; path=/'];\n",
-      "            cookieParts.push('; domain=' + window.location.hostname);\n",
-      "            cookieParts.push('; max-age=10');//expire after 10 seconds\n",
-      "            document.cookie = cookieParts.join('');\n",
-      "            var originalURL = getOriginalUrl(\"url\");\n",
-      "            var originalHost = window.location.host;\n",
-      "            var newHref = window.location.protocol + \"//\" + originalHost;\n",
-      "            originalURL = originalURL || '/';\n",
-      "            newHref = newHref + originalURL;\n",
-      "            window.location.href = newHref;\n",
-      "        }\n",
-      "\n",
-      "        function getOriginalUrl(name) {\n",
-      "            var url = getQueryString(name);\n",
-      "            if (!url) return null;\n",
-      "            var regExMatcher = new RegExp(\"(([^&#@]*)|&|#|$)\");\n",
-      "            var matches = regExMatcher.exec(url);\n",
-      "            if (!matches) return null;\n",
-      "            return matches[0];\n",
-      "        }\n",
-      "    </script></head><body><main class=\"zsg-layout-content\"><div class=\"error-content-block\"><div class=\"error-text-content\"><!-- <h1>Captcha</h1> --><h5>Please verify you're a human to continue.</h5><div id=\"content\" class=\"captcha-container\"><div id=\"px-captcha\" data-callback=\"handleCaptcha\"></div><img src=\"https://www.zillowstatic.com/static/logos/logo-65x14.png\" width=\"65\" alt=\"Zillow\" height=\"14\"></img></div></div></div></main><h4 id=\"uuid\" class=\"uuid-string zsg-fineprint\"></h4></body></html><!-- H:001  T:0ms  S:2605  R:Fri Nov 18 18:04:41 PST 2022  B:5.0.69791-master.6a9bb69~qa,spring_4_pre.670462f3 -->\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "response = requests.get(\"https://www.zillow.com/homes/Raleigh,-NC_rb/\")\n",
     "print(response.text)"
@@ -79,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,12 +44,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<built-in method capitalize of str object at 0x7f8bd2db5570>\n"
+     ]
+    }
+   ],
    "source": [
     "#add contents of urls to soup variable from each url\n",
     "soup = BeautifulSoup(r.content, \"html.parser\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "soup.find_all(\"a\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<a class=\"StyledPropertyCardDataArea-c11n-8-73-8__sc-yipmu-0 lhIXlm property-card-link\" data-test=\"property-card-link\" href=\"https://www.zillow.com/homedetails/5904-Endsley-Ct-Raleigh-NC-27610/65332868_zpid/\" tabindex=\"0\"><address data-test=\"property-card-addr\">5904 Endsley Ct, Raleigh, NC 27610</address></a>,\n",
+       " <a aria-hidden=\"false\" class=\"property-card-link\" data-test=\"property-card-link\" href=\"https://www.zillow.com/homedetails/5904-Endsley-Ct-Raleigh-NC-27610/65332868_zpid/\" tabindex=\"-1\"><div class=\"StyledPropertyCardPhoto-c11n-8-73-8__sc-ormo34-0 ijneAT srp__sc-1u5uvur-0 bofBEz\"><img alt=\"5904 Endsley Ct, Raleigh, NC 27610\" aria-hidden=\"false\" class=\"Image-c11n-8-73-8__sc-1rtmhsc-0 emzIcX\" src=\"https://photos.zillowstatic.com/fp/7a57ff006859dce7652880ac71e6135a-p_e.jpg\"/></div></a>,\n",
+       " <a class=\"StyledPropertyCardDataArea-c11n-8-73-8__sc-yipmu-0 lhIXlm property-card-link\" data-test=\"property-card-link\" href=\"https://www.zillow.com/homedetails/2717-Hiking-Trl-Raleigh-NC-27615/6495378_zpid/\" tabindex=\"0\"><address data-test=\"property-card-addr\">2717 Hiking Trl, Raleigh, NC 27615</address></a>,\n",
+       " <a aria-hidden=\"false\" class=\"property-card-link\" data-test=\"property-card-link\" href=\"https://www.zillow.com/homedetails/2717-Hiking-Trl-Raleigh-NC-27615/6495378_zpid/\" tabindex=\"-1\"><div class=\"StyledPropertyCardPhoto-c11n-8-73-8__sc-ormo34-0 ijneAT srp__sc-1u5uvur-0 bofBEz\"><img alt=\"2717 Hiking Trl, Raleigh, NC 27615\" aria-hidden=\"false\" class=\"Image-c11n-8-73-8__sc-1rtmhsc-0 emzIcX\" src=\"https://photos.zillowstatic.com/fp/3bd6c470e9e6e455b912bd06857da17e-p_e.jpg\"/></div></a>,\n",
+       " <a class=\"StyledPropertyCardDataArea-c11n-8-73-8__sc-yipmu-0 lhIXlm property-card-link\" data-test=\"property-card-link\" href=\"https://www.zillow.com/homedetails/117-Rosehaven-Dr-Raleigh-NC-27609/6475740_zpid/\" tabindex=\"0\"><address data-test=\"property-card-addr\">117 Rosehaven Dr, Raleigh, NC 27609</address></a>,\n",
+       " <a aria-hidden=\"false\" class=\"property-card-link\" data-test=\"property-card-link\" href=\"https://www.zillow.com/homedetails/117-Rosehaven-Dr-Raleigh-NC-27609/6475740_zpid/\" tabindex=\"-1\"><div class=\"StyledPropertyCardPhoto-c11n-8-73-8__sc-ormo34-0 ijneAT srp__sc-1u5uvur-0 bofBEz\"><img alt=\"117 Rosehaven Dr, Raleigh, NC 27609\" aria-hidden=\"false\" class=\"Image-c11n-8-73-8__sc-1rtmhsc-0 emzIcX\" src=\"https://photos.zillowstatic.com/fp/38eefe38bc52bdb093397068946fc0a0-p_e.jpg\"/></div></a>,\n",
+       " <a class=\"StyledPropertyCardDataArea-c11n-8-73-8__sc-yipmu-0 lhIXlm property-card-link\" data-test=\"property-card-link\" href=\"https://www.zillow.com/homedetails/4913-Swordfish-Dr-Raleigh-NC-27603/67554273_zpid/\" tabindex=\"0\"><address data-test=\"property-card-addr\">4913 Swordfish Dr, Raleigh, NC 27603</address></a>,\n",
+       " <a aria-hidden=\"false\" class=\"property-card-link\" data-test=\"property-card-link\" href=\"https://www.zillow.com/homedetails/4913-Swordfish-Dr-Raleigh-NC-27603/67554273_zpid/\" tabindex=\"-1\"><div class=\"StyledPropertyCardPhoto-c11n-8-73-8__sc-ormo34-0 ijneAT srp__sc-1u5uvur-0 bofBEz\"><img alt=\"4913 Swordfish Dr, Raleigh, NC 27603\" aria-hidden=\"false\" class=\"Image-c11n-8-73-8__sc-1rtmhsc-0 emzIcX\" src=\"https://photos.zillowstatic.com/fp/abd4cd010812a5941d4bf2238c553d9b-p_e.jpg\"/></div></a>,\n",
+       " <a class=\"StyledPropertyCardDataArea-c11n-8-73-8__sc-yipmu-0 lhIXlm property-card-link\" data-test=\"property-card-link\" href=\"https://www.zillow.com/homedetails/8308-Grey-Abbey-Pl-Raleigh-NC-27615/6493189_zpid/\" tabindex=\"0\"><address data-test=\"property-card-addr\">8308 Grey Abbey Pl, Raleigh, NC 27615</address></a>,\n",
+       " <a aria-hidden=\"false\" class=\"property-card-link\" data-test=\"property-card-link\" href=\"https://www.zillow.com/homedetails/8308-Grey-Abbey-Pl-Raleigh-NC-27615/6493189_zpid/\" tabindex=\"-1\"><div class=\"StyledPropertyCardPhoto-c11n-8-73-8__sc-ormo34-0 ijneAT srp__sc-1u5uvur-0 bofBEz\"><img alt=\"8308 Grey Abbey Pl, Raleigh, NC 27615\" aria-hidden=\"false\" class=\"Image-c11n-8-73-8__sc-1rtmhsc-0 emzIcX\" src=\"https://photos.zillowstatic.com/fp/940057c63291b1725173479fa7a6061d-p_e.jpg\"/></div></a>,\n",
+       " <a class=\"StyledPropertyCardDataArea-c11n-8-73-8__sc-yipmu-0 lhIXlm property-card-link\" data-test=\"property-card-link\" href=\"https://www.zillow.com/homedetails/5812-Coffey-St-Raleigh-NC-27604/6427532_zpid/\" tabindex=\"0\"><address data-test=\"property-card-addr\">5812 Coffey St, Raleigh, NC 27604</address></a>,\n",
+       " <a aria-hidden=\"false\" class=\"property-card-link\" data-test=\"property-card-link\" href=\"https://www.zillow.com/homedetails/5812-Coffey-St-Raleigh-NC-27604/6427532_zpid/\" tabindex=\"-1\"><div class=\"StyledPropertyCardPhoto-c11n-8-73-8__sc-ormo34-0 ijneAT srp__sc-1u5uvur-0 bofBEz\"><img alt=\"5812 Coffey St, Raleigh, NC 27604\" aria-hidden=\"false\" class=\"Image-c11n-8-73-8__sc-1rtmhsc-0 emzIcX\" src=\"https://photos.zillowstatic.com/fp/fa44039a3dd7df43654435128c1c8c5d-p_e.jpg\"/></div></a>,\n",
+       " <a class=\"StyledPropertyCardDataArea-c11n-8-73-8__sc-yipmu-0 lhIXlm property-card-link\" data-test=\"property-card-link\" href=\"https://www.zillow.com/homedetails/2108-Ramseur-St-Raleigh-NC-27610/6398826_zpid/\" tabindex=\"0\"><address data-test=\"property-card-addr\">2108 Ramseur St, Raleigh, NC 27610</address></a>,\n",
+       " <a aria-hidden=\"false\" class=\"property-card-link\" data-test=\"property-card-link\" href=\"https://www.zillow.com/homedetails/2108-Ramseur-St-Raleigh-NC-27610/6398826_zpid/\" tabindex=\"-1\"><div class=\"StyledPropertyCardPhoto-c11n-8-73-8__sc-ormo34-0 ijneAT srp__sc-1u5uvur-0 bofBEz\"><img alt=\"2108 Ramseur St, Raleigh, NC 27610\" aria-hidden=\"false\" class=\"Image-c11n-8-73-8__sc-1rtmhsc-0 emzIcX\" src=\"https://photos.zillowstatic.com/fp/a7b2a6e74c311274e82634f6f5a40b8c-p_e.jpg\"/></div></a>,\n",
+       " <a class=\"StyledPropertyCardDataArea-c11n-8-73-8__sc-yipmu-0 lhIXlm property-card-link\" data-test=\"property-card-link\" href=\"https://www.zillow.com/homedetails/4209-Willow-Lake-Rd-Raleigh-NC-27616/6547491_zpid/\" tabindex=\"0\"><address data-test=\"property-card-addr\">4209 Willow Lake Rd, Raleigh, NC 27616</address></a>,\n",
+       " <a aria-hidden=\"false\" class=\"property-card-link\" data-test=\"property-card-link\" href=\"https://www.zillow.com/homedetails/4209-Willow-Lake-Rd-Raleigh-NC-27616/6547491_zpid/\" tabindex=\"-1\"><div class=\"StyledPropertyCardPhoto-c11n-8-73-8__sc-ormo34-0 ijneAT srp__sc-1u5uvur-0 bofBEz\"><img alt=\"4209 Willow Lake Rd, Raleigh, NC 27616\" aria-hidden=\"false\" class=\"Image-c11n-8-73-8__sc-1rtmhsc-0 emzIcX\" src=\"https://photos.zillowstatic.com/fp/39adf5527352fea6f7d82f26f4adfbc2-p_e.jpg\"/></div></a>,\n",
+       " <a class=\"StyledPropertyCardDataArea-c11n-8-73-8__sc-yipmu-0 lhIXlm property-card-link\" data-test=\"property-card-link\" href=\"https://www.zillow.com/homedetails/5901-Canewood-Pl-Raleigh-NC-27612/6530227_zpid/\" tabindex=\"0\"><address data-test=\"property-card-addr\">5901 Canewood Pl, Raleigh, NC 27612</address></a>,\n",
+       " <a aria-hidden=\"false\" class=\"property-card-link\" data-test=\"property-card-link\" href=\"https://www.zillow.com/homedetails/5901-Canewood-Pl-Raleigh-NC-27612/6530227_zpid/\" tabindex=\"-1\"><div class=\"StyledPropertyCardPhoto-c11n-8-73-8__sc-ormo34-0 ijneAT srp__sc-1u5uvur-0 bofBEz\"><img alt=\"5901 Canewood Pl, Raleigh, NC 27612\" aria-hidden=\"false\" class=\"Image-c11n-8-73-8__sc-1rtmhsc-0 emzIcX\" src=\"https://photos.zillowstatic.com/fp/d132523e57f68cdfeaeb70f47bc1a29f-p_e.jpg\"/></div></a>]"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# From intial queried page (e.g., homes in Raleigh) find all links to homedetails page,\n",
+    "# which will have more detailed information on the home.\n",
+    "\n",
+    "# This will be the main base where the scraper will come back to after scraping each\n",
+    "# home details page. \n",
+    "\n",
+    "# Example: queried page -> homedetails page -> scrape data -> queried page \n",
+    "# Loop until all homes are scraped, then proceed to next page.\n",
+    "soup.find_all(href=re.compile(\"homedetails\"))"
    ]
   },
   {
