--- a/data_exploration/zillow_scraper.ipynb
+++ b/data_exploration/zillow_scraper.ipynb
@@ -71,37 +71,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[<a class=\"StyledPropertyCardDataArea-c11n-8-73-8__sc-yipmu-0 lhIXlm property-card-link\" data-test=\"property-card-link\" href=\"https://www.zillow.com/homedetails/5904-Endsley-Ct-Raleigh-NC-27610/65332868_zpid/\" tabindex=\"0\"><address data-test=\"property-card-addr\">5904 Endsley Ct, Raleigh, NC 27610</address></a>,\n",
-       " <a aria-hidden=\"false\" class=\"property-card-link\" data-test=\"property-card-link\" href=\"https://www.zillow.com/homedetails/5904-Endsley-Ct-Raleigh-NC-27610/65332868_zpid/\" tabindex=\"-1\"><div class=\"StyledPropertyCardPhoto-c11n-8-73-8__sc-ormo34-0 ijneAT srp__sc-1u5uvur-0 bofBEz\"><img alt=\"5904 Endsley Ct, Raleigh, NC 27610\" aria-hidden=\"false\" class=\"Image-c11n-8-73-8__sc-1rtmhsc-0 emzIcX\" src=\"https://photos.zillowstatic.com/fp/7a57ff006859dce7652880ac71e6135a-p_e.jpg\"/></div></a>,\n",
-       " <a class=\"StyledPropertyCardDataArea-c11n-8-73-8__sc-yipmu-0 lhIXlm property-card-link\" data-test=\"property-card-link\" href=\"https://www.zillow.com/homedetails/2717-Hiking-Trl-Raleigh-NC-27615/6495378_zpid/\" tabindex=\"0\"><address data-test=\"property-card-addr\">2717 Hiking Trl, Raleigh, NC 27615</address></a>,\n",
-       " <a aria-hidden=\"false\" class=\"property-card-link\" data-test=\"property-card-link\" href=\"https://www.zillow.com/homedetails/2717-Hiking-Trl-Raleigh-NC-27615/6495378_zpid/\" tabindex=\"-1\"><div class=\"StyledPropertyCardPhoto-c11n-8-73-8__sc-ormo34-0 ijneAT srp__sc-1u5uvur-0 bofBEz\"><img alt=\"2717 Hiking Trl, Raleigh, NC 27615\" aria-hidden=\"false\" class=\"Image-c11n-8-73-8__sc-1rtmhsc-0 emzIcX\" src=\"https://photos.zillowstatic.com/fp/3bd6c470e9e6e455b912bd06857da17e-p_e.jpg\"/></div></a>,\n",
-       " <a class=\"StyledPropertyCardDataArea-c11n-8-73-8__sc-yipmu-0 lhIXlm property-card-link\" data-test=\"property-card-link\" href=\"https://www.zillow.com/homedetails/117-Rosehaven-Dr-Raleigh-NC-27609/6475740_zpid/\" tabindex=\"0\"><address data-test=\"property-card-addr\">117 Rosehaven Dr, Raleigh, NC 27609</address></a>,\n",
-       " <a aria-hidden=\"false\" class=\"property-card-link\" data-test=\"property-card-link\" href=\"https://www.zillow.com/homedetails/117-Rosehaven-Dr-Raleigh-NC-27609/6475740_zpid/\" tabindex=\"-1\"><div class=\"StyledPropertyCardPhoto-c11n-8-73-8__sc-ormo34-0 ijneAT srp__sc-1u5uvur-0 bofBEz\"><img alt=\"117 Rosehaven Dr, Raleigh, NC 27609\" aria-hidden=\"false\" class=\"Image-c11n-8-73-8__sc-1rtmhsc-0 emzIcX\" src=\"https://photos.zillowstatic.com/fp/38eefe38bc52bdb093397068946fc0a0-p_e.jpg\"/></div></a>,\n",
-       " <a class=\"StyledPropertyCardDataArea-c11n-8-73-8__sc-yipmu-0 lhIXlm property-card-link\" data-test=\"property-card-link\" href=\"https://www.zillow.com/homedetails/4913-Swordfish-Dr-Raleigh-NC-27603/67554273_zpid/\" tabindex=\"0\"><address data-test=\"property-card-addr\">4913 Swordfish Dr, Raleigh, NC 27603</address></a>,\n",
-       " <a aria-hidden=\"false\" class=\"property-card-link\" data-test=\"property-card-link\" href=\"https://www.zillow.com/homedetails/4913-Swordfish-Dr-Raleigh-NC-27603/67554273_zpid/\" tabindex=\"-1\"><div class=\"StyledPropertyCardPhoto-c11n-8-73-8__sc-ormo34-0 ijneAT srp__sc-1u5uvur-0 bofBEz\"><img alt=\"4913 Swordfish Dr, Raleigh, NC 27603\" aria-hidden=\"false\" class=\"Image-c11n-8-73-8__sc-1rtmhsc-0 emzIcX\" src=\"https://photos.zillowstatic.com/fp/abd4cd010812a5941d4bf2238c553d9b-p_e.jpg\"/></div></a>,\n",
-       " <a class=\"StyledPropertyCardDataArea-c11n-8-73-8__sc-yipmu-0 lhIXlm property-card-link\" data-test=\"property-card-link\" href=\"https://www.zillow.com/homedetails/8308-Grey-Abbey-Pl-Raleigh-NC-27615/6493189_zpid/\" tabindex=\"0\"><address data-test=\"property-card-addr\">8308 Grey Abbey Pl, Raleigh, NC 27615</address></a>,\n",
-       " <a aria-hidden=\"false\" class=\"property-card-link\" data-test=\"property-card-link\" href=\"https://www.zillow.com/homedetails/8308-Grey-Abbey-Pl-Raleigh-NC-27615/6493189_zpid/\" tabindex=\"-1\"><div class=\"StyledPropertyCardPhoto-c11n-8-73-8__sc-ormo34-0 ijneAT srp__sc-1u5uvur-0 bofBEz\"><img alt=\"8308 Grey Abbey Pl, Raleigh, NC 27615\" aria-hidden=\"false\" class=\"Image-c11n-8-73-8__sc-1rtmhsc-0 emzIcX\" src=\"https://photos.zillowstatic.com/fp/940057c63291b1725173479fa7a6061d-p_e.jpg\"/></div></a>,\n",
-       " <a class=\"StyledPropertyCardDataArea-c11n-8-73-8__sc-yipmu-0 lhIXlm property-card-link\" data-test=\"property-card-link\" href=\"https://www.zillow.com/homedetails/5812-Coffey-St-Raleigh-NC-27604/6427532_zpid/\" tabindex=\"0\"><address data-test=\"property-card-addr\">5812 Coffey St, Raleigh, NC 27604</address></a>,\n",
-       " <a aria-hidden=\"false\" class=\"property-card-link\" data-test=\"property-card-link\" href=\"https://www.zillow.com/homedetails/5812-Coffey-St-Raleigh-NC-27604/6427532_zpid/\" tabindex=\"-1\"><div class=\"StyledPropertyCardPhoto-c11n-8-73-8__sc-ormo34-0 ijneAT srp__sc-1u5uvur-0 bofBEz\"><img alt=\"5812 Coffey St, Raleigh, NC 27604\" aria-hidden=\"false\" class=\"Image-c11n-8-73-8__sc-1rtmhsc-0 emzIcX\" src=\"https://photos.zillowstatic.com/fp/fa44039a3dd7df43654435128c1c8c5d-p_e.jpg\"/></div></a>,\n",
-       " <a class=\"StyledPropertyCardDataArea-c11n-8-73-8__sc-yipmu-0 lhIXlm property-card-link\" data-test=\"property-card-link\" href=\"https://www.zillow.com/homedetails/2108-Ramseur-St-Raleigh-NC-27610/6398826_zpid/\" tabindex=\"0\"><address data-test=\"property-card-addr\">2108 Ramseur St, Raleigh, NC 27610</address></a>,\n",
-       " <a aria-hidden=\"false\" class=\"property-card-link\" data-test=\"property-card-link\" href=\"https://www.zillow.com/homedetails/2108-Ramseur-St-Raleigh-NC-27610/6398826_zpid/\" tabindex=\"-1\"><div class=\"StyledPropertyCardPhoto-c11n-8-73-8__sc-ormo34-0 ijneAT srp__sc-1u5uvur-0 bofBEz\"><img alt=\"2108 Ramseur St, Raleigh, NC 27610\" aria-hidden=\"false\" class=\"Image-c11n-8-73-8__sc-1rtmhsc-0 emzIcX\" src=\"https://photos.zillowstatic.com/fp/a7b2a6e74c311274e82634f6f5a40b8c-p_e.jpg\"/></div></a>,\n",
-       " <a class=\"StyledPropertyCardDataArea-c11n-8-73-8__sc-yipmu-0 lhIXlm property-card-link\" data-test=\"property-card-link\" href=\"https://www.zillow.com/homedetails/4209-Willow-Lake-Rd-Raleigh-NC-27616/6547491_zpid/\" tabindex=\"0\"><address data-test=\"property-card-addr\">4209 Willow Lake Rd, Raleigh, NC 27616</address></a>,\n",
-       " <a aria-hidden=\"false\" class=\"property-card-link\" data-test=\"property-card-link\" href=\"https://www.zillow.com/homedetails/4209-Willow-Lake-Rd-Raleigh-NC-27616/6547491_zpid/\" tabindex=\"-1\"><div class=\"StyledPropertyCardPhoto-c11n-8-73-8__sc-ormo34-0 ijneAT srp__sc-1u5uvur-0 bofBEz\"><img alt=\"4209 Willow Lake Rd, Raleigh, NC 27616\" aria-hidden=\"false\" class=\"Image-c11n-8-73-8__sc-1rtmhsc-0 emzIcX\" src=\"https://photos.zillowstatic.com/fp/39adf5527352fea6f7d82f26f4adfbc2-p_e.jpg\"/></div></a>,\n",
-       " <a class=\"StyledPropertyCardDataArea-c11n-8-73-8__sc-yipmu-0 lhIXlm property-card-link\" data-test=\"property-card-link\" href=\"https://www.zillow.com/homedetails/5901-Canewood-Pl-Raleigh-NC-27612/6530227_zpid/\" tabindex=\"0\"><address data-test=\"property-card-addr\">5901 Canewood Pl, Raleigh, NC 27612</address></a>,\n",
-       " <a aria-hidden=\"false\" class=\"property-card-link\" data-test=\"property-card-link\" href=\"https://www.zillow.com/homedetails/5901-Canewood-Pl-Raleigh-NC-27612/6530227_zpid/\" tabindex=\"-1\"><div class=\"StyledPropertyCardPhoto-c11n-8-73-8__sc-ormo34-0 ijneAT srp__sc-1u5uvur-0 bofBEz\"><img alt=\"5901 Canewood Pl, Raleigh, NC 27612\" aria-hidden=\"false\" class=\"Image-c11n-8-73-8__sc-1rtmhsc-0 emzIcX\" src=\"https://photos.zillowstatic.com/fp/d132523e57f68cdfeaeb70f47bc1a29f-p_e.jpg\"/></div></a>]"
-      ]
-     },
-     "execution_count": 73,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# From intial queried page (e.g., homes in Raleigh) find all links to homedetails page,\n",
     "# which will have more detailed information on the home.\n",
@@ -111,7 +83,43 @@
     "\n",
     "# Example: queried page -> homedetails page -> scrape data -> queried page \n",
     "# Loop until all homes are scraped, then proceed to next page.\n",
-    "soup.find_all(href=re.compile(\"homedetails\"))"
+    "soup.find_all(href=re.compile(\"homedetails\"))\n",
+    "# soup.select('a[href^=\"https://www.zillow.com/homedetails/\"]')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_all_keyword_units(keyword):\n",
+    "    \"\"\"Returns a list of keyword matches\"\"\"\n",
+    "    keyword_match_list = soup.find_all(href=re.compile(str(keyword)))\n",
+    "    return keyword_match_list\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Simply testing function, can remove\n",
+    "print(find_all_keyword_units(keyword = \"homedetails\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "page 1:\n",
+    "\n",
+    "https://www.zillow.com/raleigh-nc/luxury-homes/?searchQueryState=%7B%22usersSearchTerm%22%3A%22Raleigh%2C%20NC%22%2C%22mapBounds%22%3A%7B%22west%22%3A-78.92658305517578%2C%22east%22%3A-78.32439494482422%2C%22south%22%3A35.45233694912461%2C%22north%22%3A36.119629123743984%7D%2C%22regionSelection%22%3A%5B%7B%22regionId%22%3A54047%2C%22regionType%22%3A6%7D%5D%2C%22isMapVisible%22%3Atrue%2C%22filterState%22%3A%7B%22sort%22%3A%7B%22value%22%3A%22priced%22%7D%2C%22ah%22%3A%7B%22value%22%3Atrue%7D%7D%2C%22isListVisible%22%3Atrue%2C%22mapZoom%22%3A11%7D\n",
+    "\n",
+    "https://www.zillow.com/raleigh-nc/luxury-homes/2_p/?searchQueryState=%7B%22usersSearchTerm%22%3A%22Raleigh%2C%20NC%22%2C%22mapBounds%22%3A%7B%22west%22%3A-78.92658305517578%2C%22east%22%3A-78.32439494482422%2C%22south%22%3A35.45233694912461%2C%22north%22%3A36.119629123743984%7D%2C%22regionSelection%22%3A%5B%7B%22regionId%22%3A54047%2C%22regionType%22%3A6%7D%5D%2C%22isMapVisible%22%3Atrue%2C%22filterState%22%3A%7B%22sort%22%3A%7B%22value%22%3A%22priced%22%7D%2C%22ah%22%3A%7B%22value%22%3Atrue%7D%7D%2C%22isListVisible%22%3Atrue%2C%22mapZoom%22%3A11%2C%22pagination%22%3A%7B%22currentPage%22%3A2%7D%7D\n",
+    "\n",
+    "https://www.zillow.com/raleigh-nc/luxury-homes/3_p/?searchQueryState=%7B%22usersSearchTerm%22%3A%22Raleigh%2C%20NC%22%2C%22mapBounds%22%3A%7B%22west%22%3A-78.92658305517578%2C%22east%22%3A-78.32439494482422%2C%22south%22%3A35.45233694912461%2C%22north%22%3A36.119629123743984%7D%2C%22regionSelection%22%3A%5B%7B%22regionId%22%3A54047%2C%22regionType%22%3A6%7D%5D%2C%22isMapVisible%22%3Atrue%2C%22filterState%22%3A%7B%22sort%22%3A%7B%22value%22%3A%22priced%22%7D%2C%22ah%22%3A%7B%22value%22%3Atrue%7D%7D%2C%22isListVisible%22%3Atrue%2C%22mapZoom%22%3A11%2C%22pagination%22%3A%7B%22currentPage%22%3A3%7D%7D"
    ]
   },
   {
