--- a/data_exploration/zillow_scraper.ipynb
+++ b/data_exploration/zillow_scraper.ipynb
@@ -25,10 +25,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Header required to circumvent captcha\n",
     "req_headers = {\n",
     "    'accept': 'text/html,application/xhtml+xml,application/xml;q=0.9,image/webp,image/apng,*/*;q=0.8',\n",
     "    'accept-encoding': 'gzip, deflate, br',\n",
@@ -36,25 +37,18 @@
     "    'upgrade-insecure-requests': '1',\n",
     "    'user-agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/61.0.3163.100 Safari/537.36'\n",
     "}\n",
+    "\n",
     "with requests.Session() as s:\n",
-    "   city = 'raleigh/' #*****change this city to what you want*****\n",
-    "   url = 'https://www.zillow.com/homes/for_sale/'+city    \n",
+    "   city_state_abbr = 'raleigh-nc/' #*****change this city to what you want*****\n",
+    "   url = 'https://www.zillow.com/' + city_state_abbr\n",
     "   r = s.get(url, headers=req_headers)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 88,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<built-in method capitalize of str object at 0x7f8bd2db5570>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#add contents of urls to soup variable from each url\n",
     "soup = BeautifulSoup(r.content, \"html.parser\")"
@@ -96,24 +90,70 @@
     "def find_all_keyword_units(keyword):\n",
     "    \"\"\"Returns a list of keyword matches\"\"\"\n",
     "    keyword_match_list = soup.find_all(href=re.compile(str(keyword)))\n",
-    "    return keyword_match_list\n"
+    "    return keyword_match_list\n",
+    "\n",
+    "\n",
+    "# Create function to take list and return pruned list including only urls for homedetails\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 107,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<a class=\"StyledPropertyCardDataArea-c11n-8-73-8__sc-yipmu-0 lhIXlm property-card-link\" data-test=\"property-card-link\" href=\"https://www.zillow.com/homedetails/5904-Endsley-Ct-Raleigh-NC-27610/65332868_zpid/\" tabindex=\"0\"><address data-test=\"property-card-addr\">5904 Endsley Ct, Raleigh, NC 27610</address></a>, <a aria-hidden=\"false\" class=\"property-card-link\" data-test=\"property-card-link\" href=\"https://www.zillow.com/homedetails/5904-Endsley-Ct-Raleigh-NC-27610/65332868_zpid/\" tabindex=\"-1\"><div class=\"StyledPropertyCardPhoto-c11n-8-73-8__sc-ormo34-0 ijneAT srp__sc-1u5uvur-0 bofBEz\"><img alt=\"5904 Endsley Ct, Raleigh, NC 27610\" aria-hidden=\"false\" class=\"Image-c11n-8-73-8__sc-1rtmhsc-0 emzIcX\" src=\"https://photos.zillowstatic.com/fp/7a57ff006859dce7652880ac71e6135a-p_e.jpg\"/></div></a>, <a class=\"StyledPropertyCardDataArea-c11n-8-73-8__sc-yipmu-0 lhIXlm property-card-link\" data-test=\"property-card-link\" href=\"https://www.zillow.com/homedetails/2717-Hiking-Trl-Raleigh-NC-27615/6495378_zpid/\" tabindex=\"0\"><address data-test=\"property-card-addr\">2717 Hiking Trl, Raleigh, NC 27615</address></a>, <a aria-hidden=\"false\" class=\"property-card-link\" data-test=\"property-card-link\" href=\"https://www.zillow.com/homedetails/2717-Hiking-Trl-Raleigh-NC-27615/6495378_zpid/\" tabindex=\"-1\"><div class=\"StyledPropertyCardPhoto-c11n-8-73-8__sc-ormo34-0 ijneAT srp__sc-1u5uvur-0 bofBEz\"><img alt=\"2717 Hiking Trl, Raleigh, NC 27615\" aria-hidden=\"false\" class=\"Image-c11n-8-73-8__sc-1rtmhsc-0 emzIcX\" src=\"https://photos.zillowstatic.com/fp/3bd6c470e9e6e455b912bd06857da17e-p_e.jpg\"/></div></a>, <a class=\"StyledPropertyCardDataArea-c11n-8-73-8__sc-yipmu-0 lhIXlm property-card-link\" data-test=\"property-card-link\" href=\"https://www.zillow.com/homedetails/8308-Grey-Abbey-Pl-Raleigh-NC-27615/6493189_zpid/\" tabindex=\"0\"><address data-test=\"property-card-addr\">8308 Grey Abbey Pl, Raleigh, NC 27615</address></a>, <a aria-hidden=\"false\" class=\"property-card-link\" data-test=\"property-card-link\" href=\"https://www.zillow.com/homedetails/8308-Grey-Abbey-Pl-Raleigh-NC-27615/6493189_zpid/\" tabindex=\"-1\"><div class=\"StyledPropertyCardPhoto-c11n-8-73-8__sc-ormo34-0 ijneAT srp__sc-1u5uvur-0 bofBEz\"><img alt=\"8308 Grey Abbey Pl, Raleigh, NC 27615\" aria-hidden=\"false\" class=\"Image-c11n-8-73-8__sc-1rtmhsc-0 emzIcX\" src=\"https://photos.zillowstatic.com/fp/940057c63291b1725173479fa7a6061d-p_e.jpg\"/></div></a>, <a class=\"StyledPropertyCardDataArea-c11n-8-73-8__sc-yipmu-0 lhIXlm property-card-link\" data-test=\"property-card-link\" href=\"https://www.zillow.com/homedetails/5812-Coffey-St-Raleigh-NC-27604/6427532_zpid/\" tabindex=\"0\"><address data-test=\"property-card-addr\">5812 Coffey St, Raleigh, NC 27604</address></a>, <a aria-hidden=\"false\" class=\"property-card-link\" data-test=\"property-card-link\" href=\"https://www.zillow.com/homedetails/5812-Coffey-St-Raleigh-NC-27604/6427532_zpid/\" tabindex=\"-1\"><div class=\"StyledPropertyCardPhoto-c11n-8-73-8__sc-ormo34-0 ijneAT srp__sc-1u5uvur-0 bofBEz\"><img alt=\"5812 Coffey St, Raleigh, NC 27604\" aria-hidden=\"false\" class=\"Image-c11n-8-73-8__sc-1rtmhsc-0 emzIcX\" src=\"https://photos.zillowstatic.com/fp/fa44039a3dd7df43654435128c1c8c5d-p_e.jpg\"/></div></a>, <a class=\"StyledPropertyCardDataArea-c11n-8-73-8__sc-yipmu-0 lhIXlm property-card-link\" data-test=\"property-card-link\" href=\"https://www.zillow.com/homedetails/2108-Ramseur-St-Raleigh-NC-27610/6398826_zpid/\" tabindex=\"0\"><address data-test=\"property-card-addr\">2108 Ramseur St, Raleigh, NC 27610</address></a>, <a aria-hidden=\"false\" class=\"property-card-link\" data-test=\"property-card-link\" href=\"https://www.zillow.com/homedetails/2108-Ramseur-St-Raleigh-NC-27610/6398826_zpid/\" tabindex=\"-1\"><div class=\"StyledPropertyCardPhoto-c11n-8-73-8__sc-ormo34-0 ijneAT srp__sc-1u5uvur-0 bofBEz\"><img alt=\"2108 Ramseur St, Raleigh, NC 27610\" aria-hidden=\"false\" class=\"Image-c11n-8-73-8__sc-1rtmhsc-0 emzIcX\" src=\"https://photos.zillowstatic.com/fp/a7b2a6e74c311274e82634f6f5a40b8c-p_e.jpg\"/></div></a>, <a class=\"StyledPropertyCardDataArea-c11n-8-73-8__sc-yipmu-0 lhIXlm property-card-link\" data-test=\"property-card-link\" href=\"https://www.zillow.com/homedetails/4209-Willow-Lake-Rd-Raleigh-NC-27616/6547491_zpid/\" tabindex=\"0\"><address data-test=\"property-card-addr\">4209 Willow Lake Rd, Raleigh, NC 27616</address></a>, <a aria-hidden=\"false\" class=\"property-card-link\" data-test=\"property-card-link\" href=\"https://www.zillow.com/homedetails/4209-Willow-Lake-Rd-Raleigh-NC-27616/6547491_zpid/\" tabindex=\"-1\"><div class=\"StyledPropertyCardPhoto-c11n-8-73-8__sc-ormo34-0 ijneAT srp__sc-1u5uvur-0 bofBEz\"><img alt=\"4209 Willow Lake Rd, Raleigh, NC 27616\" aria-hidden=\"false\" class=\"Image-c11n-8-73-8__sc-1rtmhsc-0 emzIcX\" src=\"https://photos.zillowstatic.com/fp/39adf5527352fea6f7d82f26f4adfbc2-p_e.jpg\"/></div></a>, <a class=\"StyledPropertyCardDataArea-c11n-8-73-8__sc-yipmu-0 lhIXlm property-card-link\" data-test=\"property-card-link\" href=\"https://www.zillow.com/homedetails/5901-Canewood-Pl-Raleigh-NC-27612/6530227_zpid/\" tabindex=\"0\"><address data-test=\"property-card-addr\">5901 Canewood Pl, Raleigh, NC 27612</address></a>, <a aria-hidden=\"false\" class=\"property-card-link\" data-test=\"property-card-link\" href=\"https://www.zillow.com/homedetails/5901-Canewood-Pl-Raleigh-NC-27612/6530227_zpid/\" tabindex=\"-1\"><div class=\"StyledPropertyCardPhoto-c11n-8-73-8__sc-ormo34-0 ijneAT srp__sc-1u5uvur-0 bofBEz\"><img alt=\"5901 Canewood Pl, Raleigh, NC 27612\" aria-hidden=\"false\" class=\"Image-c11n-8-73-8__sc-1rtmhsc-0 emzIcX\" src=\"https://photos.zillowstatic.com/fp/d132523e57f68cdfeaeb70f47bc1a29f-p_e.jpg\"/></div></a>, <a class=\"StyledPropertyCardDataArea-c11n-8-73-8__sc-yipmu-0 lhIXlm property-card-link\" data-test=\"property-card-link\" href=\"https://www.zillow.com/homedetails/3213-Flintshire-Rd-Raleigh-NC-27604/6483394_zpid/\" tabindex=\"0\"><address data-test=\"property-card-addr\">3213 Flintshire Rd, Raleigh, NC 27604</address></a>, <a aria-hidden=\"false\" class=\"property-card-link\" data-test=\"property-card-link\" href=\"https://www.zillow.com/homedetails/3213-Flintshire-Rd-Raleigh-NC-27604/6483394_zpid/\" tabindex=\"-1\"><div class=\"StyledPropertyCardPhoto-c11n-8-73-8__sc-ormo34-0 ijneAT srp__sc-1u5uvur-0 bofBEz\"><img alt=\"3213 Flintshire Rd, Raleigh, NC 27604\" aria-hidden=\"false\" class=\"Image-c11n-8-73-8__sc-1rtmhsc-0 emzIcX\" src=\"https://photos.zillowstatic.com/fp/60ba758a8810c3909a494262e95add5f-p_e.jpg\"/></div></a>, <a class=\"StyledPropertyCardDataArea-c11n-8-73-8__sc-yipmu-0 lhIXlm property-card-link\" data-test=\"property-card-link\" href=\"https://www.zillow.com/homedetails/522-E-Hargett-St-Raleigh-NC-27601/6505478_zpid/\" tabindex=\"0\"><address data-test=\"property-card-addr\">522 E Hargett St, Raleigh, NC 27601</address></a>, <a aria-hidden=\"false\" class=\"property-card-link\" data-test=\"property-card-link\" href=\"https://www.zillow.com/homedetails/522-E-Hargett-St-Raleigh-NC-27601/6505478_zpid/\" tabindex=\"-1\"><div class=\"StyledPropertyCardPhoto-c11n-8-73-8__sc-ormo34-0 ijneAT srp__sc-1u5uvur-0 bofBEz\"><img alt=\"522 E Hargett St, Raleigh, NC 27601\" aria-hidden=\"false\" class=\"Image-c11n-8-73-8__sc-1rtmhsc-0 emzIcX\" src=\"https://photos.zillowstatic.com/fp/706f4751325960ba56ea37234eb3d67d-p_e.jpg\"/></div></a>]\n"
+     ]
+    }
+   ],
    "source": [
     "# Simply testing function, can remove\n",
-    "print(find_all_keyword_units(keyword = \"homedetails\"))"
+    "test_output = find_all_keyword_units(keyword = \"homedetails\")\n",
+    "print(test_output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "href=\"https://www.zillow.com/homedetails/5904-Endsley-Ct-Raleigh-NC-27610/65332868_zpid/\"\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\"\\nfor count, value in enumerate(test_output_str.split(' ')):\\n    print(count, value)\""
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_output_str = str(test_output)\n",
+    "href_url = test_output_str.split(' ')[5]\n",
+    "print(href_url)\n",
+    "\n",
+    "\"\"\"\n",
+    "for count, value in enumerate(test_output_str.split(' ')):\n",
+    "    print(count, value)\"\"\""
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "page 1:\n",
+    "only difference is 2_p for page 2 3_p for page 3\n",
     "\n",
     "https://www.zillow.com/raleigh-nc/luxury-homes/?searchQueryState=%7B%22usersSearchTerm%22%3A%22Raleigh%2C%20NC%22%2C%22mapBounds%22%3A%7B%22west%22%3A-78.92658305517578%2C%22east%22%3A-78.32439494482422%2C%22south%22%3A35.45233694912461%2C%22north%22%3A36.119629123743984%7D%2C%22regionSelection%22%3A%5B%7B%22regionId%22%3A54047%2C%22regionType%22%3A6%7D%5D%2C%22isMapVisible%22%3Atrue%2C%22filterState%22%3A%7B%22sort%22%3A%7B%22value%22%3A%22priced%22%7D%2C%22ah%22%3A%7B%22value%22%3Atrue%7D%7D%2C%22isListVisible%22%3Atrue%2C%22mapZoom%22%3A11%7D\n",
     "\n",
