strip list function

--- a/data_exploration/zillow_scraper.ipynb
+++ b/data_exploration/zillow_scraper.ipynb
@@ -59,9 +59,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "soup.find_all(\"a\")"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -83,9 +81,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 120,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://www.zillow.com/homedetails/5904-Endsley-Ct-Raleigh-NC-27610/65332868_zpid/\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\"\\nfor count, value in enumerate(test_output_str.split(' ')):\\n    print(count, value)\""
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def find_all_keyword_units(keyword):\n",
     "    \"\"\"Returns a list of keyword matches\"\"\"\n",
@@ -94,7 +110,18 @@
     "\n",
     "\n",
     "# Create function to take list and return pruned list including only urls for homedetails\n",
-    "\n"
+    "def strip_list_to_url(html_list, index=5):\n",
+    "    list_to_str = str(html_list)\n",
+    "    href_url = list_to_str.split(' ')[index] # Selects index of href with housedetails\n",
+    "    href_url_strip = href_url.replace(\"href=\",\"\")\n",
+    "    href_url_strip = href_url_strip.replace('\"','')\n",
+    "    return href_url_strip\n",
+    "\n",
+    "print(strip_list_to_url(find_all_keyword_units(\"homedetails\")))\n",
+    "\n",
+    "\"\"\"\n",
+    "for count, value in enumerate(test_output_str.split(' ')):\n",
+    "    print(count, value)\"\"\"\n"
    ]
   },
   {
@@ -118,14 +145,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "href=\"https://www.zillow.com/homedetails/5904-Endsley-Ct-Raleigh-NC-27610/65332868_zpid/\"\n"
+      "https://www.zillow.com/homedetails/5904-Endsley-Ct-Raleigh-NC-27610/65332868_zpid/\n"
      ]
     },
     {
@@ -134,20 +161,12 @@
        "\"\\nfor count, value in enumerate(test_output_str.split(' ')):\\n    print(count, value)\""
       ]
      },
-     "execution_count": 110,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "test_output_str = str(test_output)\n",
-    "href_url = test_output_str.split(' ')[5]\n",
-    "print(href_url)\n",
-    "\n",
-    "\"\"\"\n",
-    "for count, value in enumerate(test_output_str.split(' ')):\n",
-    "    print(count, value)\"\"\""
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
