raw brach soup started

--- a/data_exploration/zillow_scraper.ipynb
+++ b/data_exploration/zillow_scraper.ipynb
@@ -60,10 +60,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "branch_url = \"https://www.zillow.com/homedetails/5904-Endsley-Ct-Raleigh-NC-27610/65332868_zpid/\"\n",
-    "branch_request = requests.get(branch_url, headers=req_headers)\n",
+    "# After finding urls from the main page, use those links to open homedetaill page\n",
+    "with requests.Session() as branch_session:\n",
+    "    branch_base_url = \"https://www.zillow.com/homedetails/\"\n",
+    "    branch_sub_url = \"5904-Endsley-Ct-Raleigh-NC-27610/65332868_zpid/\"\n",
+    "\n",
+    "    branch_request = branch_session.get(branch_base_url + branch_sub_url, headers=req_headers)\n",
+    "\n",
     "branch_soup = BeautifulSoup(branch_request.content, \"html.parser\")\n",
+    "\n",
+    "\n",
     "branch_soup.prettify()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<h1 class=\"Text-c11n-8-73-0__sc-aiai24-0 kHeRng\">5904 Endsley Ct,<!-- --> <!-- -->Raleigh, NC 27610</h1>\n"
+     ]
+    }
+   ],
+   "source": [
+    "raw_price_soup = branch_soup.find_all(\"span\", class_ = \"Text-c11n-8-73-0__sc-aiai24-0 dpf__sc-1me8eh6-0 kGdfMs fzJCbY\")\n",
+    "raw_bed_soup = branch_soup.find_all(\"strong\")\n",
+    "raw_address_soup = branch_soup.find(\"h1\")\n",
+    "\n",
+    "print(raw_address_soup)"
    ]
   },
   {
