stripped address and beds etc

--- a/data_exploration/zillow_scraper.ipynb
+++ b/data_exploration/zillow_scraper.ipynb
@@ -75,7 +75,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 185,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<span class=\"Text-c11n-8-73-0__sc-aiai24-0 dpf__sc-1me8eh6-0 kGdfMs fzJCbY\" data-testid=\"price\"><span>$352,000</span></span>]\n",
+      "[<strong>3</strong>, <strong>3</strong>, <strong>1,566</strong>, <strong>6 days</strong>, <strong>3,532</strong>, <strong>200</strong>, <strong>MON</strong>, <strong>TUE</strong>, <strong>WED</strong>, <strong>THU</strong>]\n",
+      "<h1 class=\"Text-c11n-8-73-0__sc-aiai24-0 kHeRng\">5904 Endsley Ct,<!-- --> <!-- -->Raleigh, NC 27610</h1>\n"
+     ]
+    }
+   ],
+   "source": [
+    "raw_price_soup = branch_soup.find_all(\"span\", class_ = \"Text-c11n-8-73-0__sc-aiai24-0 dpf__sc-1me8eh6-0 kGdfMs fzJCbY\")\n",
+    "raw_bed_soup = branch_soup.find_all(\"strong\")\n",
+    "raw_address_soup = branch_soup.find(\"h1\")\n",
+    "\n",
+    "print(raw_price_soup) # done\n",
+    "print(raw_bed_soup) # done\n",
+    "print(raw_address_soup)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 186,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<span class=\"Text-c11n-8-73-0__sc-aiai24-0 dpf__sc-1me8eh6-0 kGdfMs fzJCbY\" data-testid=\"price\"><span>$352,000</span></span>]\n",
+      "$352,000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Price\n",
+    "raw_price_soup = str(branch_soup.find_all(\"span\", class_ = \"Text-c11n-8-73-0__sc-aiai24-0 dpf__sc-1me8eh6-0 kGdfMs fzJCbY\"))\n",
+    "price_match_object = re.search(\"<span>(.+?)</span>\", raw_price_soup)\n",
+    "price = price_match_object.group(1)\n",
+    "\n",
+    "print(raw_price_soup)\n",
+    "print(price)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 184,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "beds 3\n",
+      "baths 3\n",
+      "sq_ft 1,566\n",
+      "days_on_zillow 6\n",
+      "count_views 3,532\n",
+      "count_saves 200\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Get all attributes besides price and address\n",
+    "# Turn this into a function bb\n",
+    "\n",
+    "# 0 Bed, 1 bath,  2 sqft, 3 days on zillow, 5 views, 6 saves\n",
+    "raw_bed_soup = str(branch_soup.find_all(\"strong\"))\n",
+    "raw_bed_soup_list = raw_bed_soup.split(' ')\n",
+    "count_beds = re.search(\"<strong>(.+?)</strong>\", raw_bed_soup_list[0]).group(1)\n",
+    "count_baths = re.search(\"<strong>(.+?)</strong>\", raw_bed_soup_list[1]).group(1)\n",
+    "sq_ft = re.search(\"<strong>(.+?)</strong>\", raw_bed_soup_list[2]).group(1)\n",
+    "days_on_zillow = re.search(\"<strong>(.+?)\", raw_bed_soup_list[3]).group(1)\n",
+    "count_views = re.search(\"<strong>(.+?)</strong>\", raw_bed_soup_list[5]).group(1)\n",
+    "count_saves = re.search(\"<strong>(.+?)</strong>\", raw_bed_soup_list[6]).group(1)\n",
+    "\n",
+    "\n",
+    "print(\"beds\",count_beds)\n",
+    "print(\"baths\", count_baths)\n",
+    "print(\"sq_ft\", sq_ft)\n",
+    "print(\"days_on_zillow\", days_on_zillow)\n",
+    "print(\"count_views\", count_views)\n",
+    "print(\"count_saves\", count_saves)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 195,
    "metadata": {},
    "outputs": [
     {
@@ -87,11 +177,31 @@
     }
    ],
    "source": [
-    "raw_price_soup = branch_soup.find_all(\"span\", class_ = \"Text-c11n-8-73-0__sc-aiai24-0 dpf__sc-1me8eh6-0 kGdfMs fzJCbY\")\n",
-    "raw_bed_soup = branch_soup.find_all(\"strong\")\n",
-    "raw_address_soup = branch_soup.find(\"h1\")\n",
-    "\n",
     "print(raw_address_soup)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 215,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\">5904 Endsley Ct,\n",
+      " <!-- -->Raleigh, NC 27610\n"
+     ]
+    }
+   ],
+   "source": [
+    "address = str(raw_address_soup)\n",
+    "address_1 = re.search(\"kHeRng(.+?)<!--\", address).group(1)\n",
+    "address_2 = re.search(\"<!-- -->(.+?)</h1>\", address).group(1)\n",
+    "\n",
+    "\n",
+    "print(address_1)\n",
+    "print(address_2)"
    ]
   },
   {
