--- a/data_exploration/zillow_scraper.ipynb
+++ b/data_exploration/zillow_scraper.ipynb
@@ -105,7 +105,7 @@
    ],
    "source": [
     "\n",
-    "re_search = re.findall(\"https://www.zillow.com/homedetails/(.+?)_zpid\", str(main_request.content))#.group(1)\n",
+    "re_search = re.findall(\"https://www.zillow.com/homedetails/(.+?)_zpid\", str(main_request.content))\n",
     "re_search_set = set(re_search)\n",
     "print(len(re_search_set))\n",
     "print(re_search_set)"
@@ -241,17 +241,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['https://www.zillow.com/homedetails/2717-Hiking-Trl-Raleigh-NC-27615/6495378_zpid/', 'tabindex=-1><div', 'https://www.zillow.com/homedetails/4601-Landover-Woods-Ln-Raleigh-NC-27616/65333576_zpid/', 'tabindex=-1><div', 'https://www.zillow.com/homedetails/4209-Willow-Lake-Rd-Raleigh-NC-27616/6547491_zpid/', 'tabindex=-1><div', 'https://www.zillow.com/homedetails/5901-Canewood-Pl-Raleigh-NC-27612/6530227_zpid/', 'tabindex=-1><div', 'https://www.zillow.com/homedetails/12600-Old-Creedmoor-Rd-Raleigh-NC-27613/6466276_zpid/', 'tabindex=-1><div', 'https://www.zillow.com/homedetails/1625-Heron-Pond-St-W-LOT-128-Raleigh-NC-27604/2060659337_zpid/', 'tabindex=-1><div', 'https://www.zillow.com/homedetails/3445-Honey-Ivy-Ln-W-LOT-146-Raleigh-NC-27604/2060658366_zpid/', 'tabindex=-1><div', 'https://www.zillow.com/homedetails/3429-Honey-Ivy-Ln-W-LOT-142-Raleigh-NC-27604/2060658499_zpid/', 'tabindex=-1><div', 'https://www.zillow.com/homedetails/3709-Beaver-Creek-Dr-Raleigh-NC-27604/6482798_zpid/', 'tabindex=-1><div']\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "test_data_list = []\n",
+    "\n",
+    "for url in re_search_set:\n",
+    "    full_url = \"https://www.zillow.com/homedetails/\" + url + \"_zpid\"\n",
+    "    scraped_data = scrape_homedetails(full_url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# I'd expect ~40 distinct urls\n",
     "def get_all_branch_urls():\n",
