set isnt iterating

--- a/data_exploration/zillow_scraper.ipynb
+++ b/data_exploration/zillow_scraper.ipynb
@@ -241,6 +241,63 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 334,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2712-Sanctuary-Woods-Ln-Raleigh-NC-27606/2060661207\n",
+      "4209-Willow-Lake-Rd-Raleigh-NC-27616/6547491\n",
+      "12600-Old-Creedmoor-Rd-Raleigh-NC-27613/6466276\n",
+      "3801-Birchwood-Ct-Raleigh-NC-27612/6526063\n",
+      "125-Trails-End-Ct-Raleigh-NC-27614/6492897\n",
+      "4805-Cardinal-Grove-Blvd-Raleigh-NC-27616/50111716\n",
+      "5901-Rivercliff-Ct-Raleigh-NC-27610/65332932\n",
+      "1113-Winterwind-Pl-Raleigh-NC-27615/6502654\n",
+      "3433-Honey-Ivy-Ln-W-LOT-143-Raleigh-NC-27604/2060658752\n",
+      "10316-20th-Rd-Raleigh-NC-27603/132205062\n",
+      "4306-Timberwood-Dr-Raleigh-NC-27612/6493671\n",
+      "5809-Wakashan-Cir-Raleigh-NC-27603/65336821\n",
+      "10937-Connally-Ln-Raleigh-NC-27614/60397614\n",
+      "4735-Quarryman-Rd-Raleigh-NC-27610/89496349\n",
+      "5920-Dunbarton-Way-Raleigh-NC-27613/6515529\n",
+      "8010-Upper-Lake-Dr-Raleigh-NC-27615/120875871\n",
+      "5904-Endsley-Ct-Raleigh-NC-27610/65332868\n",
+      "5901-Canewood-Pl-Raleigh-NC-27612/6530227\n",
+      "5518-Spindlewood-Ct-Durham-NC-27703/61727769\n",
+      "213-Georgetown-Rd-Raleigh-NC-27608/6390514\n",
+      "3709-Beaver-Creek-Dr-Raleigh-NC-27604/6482798\n",
+      "4921-Liverpool-Ln-Raleigh-NC-27604/6506286\n",
+      "3213-Flintshire-Rd-Raleigh-NC-27604/6483394\n",
+      "11301-Dunleith-Dr-Raleigh-NC-27614/6479003\n",
+      "3208-Planet-Dr-Raleigh-NC-27604/50109171\n",
+      "906-Brooks-Ave-Raleigh-NC-27607/6426706\n",
+      "1625-Heron-Pond-St-W-LOT-128-Raleigh-NC-27604/2060659337\n",
+      "3429-Honey-Ivy-Ln-W-LOT-142-Raleigh-NC-27604/2060658499\n",
+      "6524-Perry-Creek-Rd-Raleigh-NC-27616/248748691\n",
+      "2212-Keith-Dr-Raleigh-NC-27610/6395767\n",
+      "3401-Sitzman-Ct-Raleigh-NC-27616/6545844\n",
+      "3445-Honey-Ivy-Ln-W-LOT-146-Raleigh-NC-27604/2060658366\n",
+      "4728-Queen-Pierrette-St-Raleigh-NC-27610/132258003\n",
+      "2708-Boxelder-Ct-Raleigh-NC-27610/6485797\n",
+      "1415-Beacon-Village-Dr-Raleigh-NC-27604/6558186\n",
+      "8631-Neuse-Club-Ln-APT-108-Raleigh-NC-27616/132294843\n",
+      "4601-Landover-Woods-Ln-Raleigh-NC-27616/65333576\n",
+      "3417-Honey-Ivy-Ln-W-LOT-139-Raleigh-NC-27604/2060658686\n",
+      "4800-Patton-Ridge-Ct-Raleigh-NC-27612/60535350\n",
+      "2717-Hiking-Trl-Raleigh-NC-27615/6495378\n"
+     ]
+    }
+   ],
+   "source": [
+    "for val in re_search_set:\n",
+    "    print(val)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -248,9 +305,20 @@
     "test_data_list = []\n",
     "\n",
     "for url in re_search_set:\n",
+    "    print(url)\n",
     "    full_url = \"https://www.zillow.com/homedetails/\" + url + \"_zpid\"\n",
-    "    scraped_data = scrape_homedetails(full_url)"
+    "    test_data_list.append(scrape_homedetails(full_url))\n",
+    "\n",
+    "print(len(test_data_list))\n",
+    "print(test_data_list)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
